# simmo

./: README.md  main.py  package-lock.json  pyproject.toml  test.py
.github/workflows/: simmo-svelte-ci.yaml  simmo-ui-ci.yml
app/: package-lock.json
core/: README.md  app.py  pyproject.toml
core/project/: capacity.py  project.py  utils.py
core/tests/: test_utils.py
simmo/: Dockerfile  README.md  app.py  core.py  fresh.gen.ts  import_map.json  package-lock.json  package.json  pyproject.toml  utils.py
simmo-svelte/: .eslintrc.cjs  package-lock.json  package.json  setupTest.ts  svelte.config.js  vite.config.ts
simmo-svelte/src/lib/: loan.test.ts  loan.ts  project.ts  utils.ts
simmo-svelte/src/routes/: +page.server.ts  +page.svelte
simmo-ui/: package-lock.json  package.json  rome.json  tsconfig.json  vite.config.ts
simmo-ui/src/: App.tsx  dummy.test.ts  index.css
simmo-ui/src/components/: AmortizationDisplay.tsx  CsvExporter.ts  CsvExporter.tsx  ExportLoanDetails.tsx  LoanDetailsDisplay.tsx  MonetaryInput.test.tsx  MonetaryInput.tsx  RateInput.test.tsx  RateInput.tsx
simmo/capacity/: capacity.py
simmo/components/: Button.tsx
simmo/core/: project.ts  utils.test.ts  utils.ts
simmo/generic/: quantities.py
simmo/islands/: project-form.tsx  rate-input.tsx
simmo/legacy/: core.py  utils.py
simmo/project/: project.py  utils.py
simmo/public/: index.html
simmo/routes/: index.tsx  project-form.tsx  project-results.tsx  search.tsx
simmo/src/: App.css  App.js  actions.js  index.js
tests/: test_core.py  test_utils.py
(+15 files in other folders)
