[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["QuentinHuchet <huchetq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
pytest = "^7.2.2"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
